Add list of user's decks to index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,4 +8,13 @@
     <form action="/new" method="get">
         <button type="submit">New Deck</button>
     </form>
+
+    <ul>
+    {% for deck in decks %}
+
+    <li>{{ deck }}</li>
+
+    {% endfor %}
+    </ul>
+
 {% endblock %}
