--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,4 +13,27 @@
     {% endblock %}
     </body>
 
+    <script>
+        let update_deck = function(deck){
+            console.log(deck);
+            fetch("/deck/rename", {
+                method: "POST",
+                headers: {
+                    "Content-Type": "application/json"
+                },
+                body: JSON.stringify({
+                    id: deck.id,
+                    name: deck.value
+
+                })
+            }).then(response => response.json())
+            .then(data => {
+                if(data["success"]){
+                    deck.value = data["name"]
+                    deck.placeholder = data["name"]
+                }
+            });
+        }
+    </script>
+
 </html>
