--- a/templates/new_deck.html
+++ b/templates/new_deck.html
@@ -3,6 +3,7 @@
 {% block main %}
 
     <form action = "/deck/{{ deck.id }}" method = "post" id = "new_deck">
+        <input type = "hidden" name = "deck_id" value = "{{ deck.id }}">
         <input type = "hidden" name = "deck_name" value = "{{ deck.name }}">
     </form>
 
