--- a/templates/deck.html
+++ b/templates/deck.html
@@ -26,7 +26,7 @@
     <script>
         deck = document.getElementById("{{ deck.id }}");
         deck.addEventListener("focusout", function(event){
-            update_deck(event.currentTarget);})
+            update_input(event.currentTarget, "deck");})
     </script>
 
 {% endblock %}
