Move /new route to /deck/new in app.py

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block main %}
-    <form action = "/new" method="get">
+    <form action = "/deck/new" method="get">
         <button type = "submit">Create new deck</button>
     </form>
 
