Fix deck_name to deck.name in HTML title

--- a/templates/deck.html
+++ b/templates/deck.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    Deck: {{ deck_name }}
+    Deck: {{ deck.name }}
 {% endblock %}
 
 {% block main %}
