Add necessary 'const'

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     <script>
         const new_deck = document.getElementById("new_deck");
         new_deck.addEventListener("click", async function(event){
-            deck = await create_new_deck();
+            const deck = await create_new_deck();
             redirect("POST", `/deck/${deck.id}`);
         })
     </script>
