Move functionality for creating new card to a separate route from create_new_deck

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,7 @@
         const new_deck = document.getElementById("new_deck");
         new_deck.addEventListener("click", async function(event){
             const deck = await create_new_deck();
+            await create_new_card(deck.id);
             redirect("POST", `/deck/${deck.id}`);
         })
     </script>
