Move contents of script tags in *.html files to *.js files

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,7 @@
 {% extends "layout.html" %}
 
-{% block title %}
-    Main Menu
-{% endblock %}
+{% block script %}index{% endblock %}
+{% block title %}Main Menu{% endblock %}
 
 {% block main %}
     <button id="new_deck">Create new deck</button>
@@ -16,14 +15,5 @@
     </form>
 
     {% endfor %}
-
-    <script>
-        const new_deck = document.getElementById("new_deck");
-        new_deck.addEventListener("click", async function(event){
-            const deck = await create_new_deck();
-            await create_new_card(deck.id);
-            redirect("POST", `/deck/${deck.id}`);
-        })
-    </script>
 
 {% endblock %}
