--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1, width=device-width">
         <script src = "/static/js/main.js" defer> </script>
+        <script src = "/static/js/{% block script %}{% endblock %}.js" defer></script>
         <title>Shuffle: {% block title %}{% endblock %}</title>
     </head>
 
@@ -14,5 +15,4 @@
     {% endblock %}
     </body>
     
-
 </html>
