Add delete button and route for each card in each deck

--- a/templates/deck.html
+++ b/templates/deck.html
@@ -20,6 +20,7 @@
         <form class = "card" id = "{{ card.id }}">
             <input type = "text" placeholder = "{{ card.front }}" value = "{{ card.front }}" class = "front">
             <input type = "text" placeholder = "{{ card.back }}" value = "{{ card.back }}" class = "back">
+            <button type = "button" class = "delete">Delete</button>
         </form>
     </li>
 
