Move view deck functionality from index.html to index.js for flexibility

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,9 @@
 
     {% for deck in decks %}
 
-    <form action = "/deck/{{ deck.id }}" method = "post" class = "deck" id = "{{ deck.id }}">
+    <form method = "post" class = "deck" id = "{{ deck.id }}">
         <input type = "text" value = "{{ deck.name }}" placeholder = "{{ deck.name }}" disabled> 
-        <button type = "submit">View</button>
+        <button type = "button" class = "view">View</button>
         <button type = "button" class = "study">Study</button>
         <input type = "hidden" name = "deck_id">
         <input type = "hidden" name = "deck_name">
