Add  template for user_score in study.html

--- a/templates/study.html
+++ b/templates/study.html
@@ -21,6 +21,17 @@
         <input type = "hidden" class = "answer" disabled>
         <button type = "button" class = "reveal">Reveal</button>
         <button type = "button" class = "next">Next</button>
-    </form>
+        <div id = "user_score">
+            <p>How well did you do?*</p>
+            <button type = "button" class = "zero">0</button>
+            <button type = "button" class = "one">1</button>
+            <button type = "button" class = "two">2</button>
+            <button type = "button" class = "three">3</button>
+            <button type = "button" class = "four">4</button>
+            <button type = "button" class = "five">5</button>
+            <br><br>
+            <small>*0 (Failed to answer), 1 (Had great difficulty) to 5 (Answered immediately)</small>
+        </div>
+        </form>
 
 {% endblock %}
