Modify user_score to appear only after revealing answer

--- a/templates/study.html
+++ b/templates/study.html
@@ -21,7 +21,7 @@
         <input type = "hidden" class = "answer" disabled>
         <button type = "button" class = "reveal">Reveal</button>
         <button type = "button" class = "next">Next</button>
-        <div id = "user_score">
+        <div id = "user_score" hidden>
             <p>How well did you do?*</p>
             <button type = "button" class = "zero">0</button>
             <button type = "button" class = "one">1</button>
